// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled can add new classNames 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
/>
`;

exports[`Styled can render components 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  />,
]
`;

exports[`Styled can render with default props 1`] = `
<Text
  accessibilityRole="header"
  style={
    Array [
      Object {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
/>
`;

exports[`Styled can set base classNames 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
/>
`;

exports[`Styled can style custom props 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  />,
]
`;

exports[`Styled classProps on css 1`] = `
<View
  style={
    Array [
      Object {
        "$$css": true,
        "p-4 m-1": "p-4 m-1",
      },
    ]
  }
/>
`;

exports[`Styled classProps on native 1`] = `
<View
  marginBottom={4}
  marginLeft={4}
  marginRight={4}
  marginTop={4}
  style={
    Array [
      Object {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
/>
`;
